Small refactoring of code and screen no longer starts overflow

--- a/src/containers/UserFrontpage.css
+++ b/src/containers/UserFrontpage.css
@@ -14,7 +14,7 @@
     padding: 4px;
     display: flex;
     flex-flow: column;
-    min-height: 110vh;
+    min-height: 85vh;
 }
 
 .userFrontpage .projectContainer {
